# py-datascience-from-zero

./: .gitignore  pyproject.toml
data-viz/: histogram.py  learn_matplotlib.py
linear-algebra/: vectors.py
linear-algebra/learning_session/: understand_matrix.py  understand_vectors.py
