[tool.poetry]
name = "py-datascience-from-zero"
version = "0.1.0"
description = ""
authors = ["Philip Martins <philip.martt@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
